Vite 5 does not support Node.js 14 / 16 / 17 / 19, which reached its EOL. Node.js 18 / 20+ is now required.

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "prepublishOnly": "npm run build"
   },
   "engines": {
-    "node": "^14.18.0 || >=16.0.0"
+    "node": "^18.20.2 || ^20.13.1"
   },
   "repository": {
     "type": "git",
